--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^1.1.0",
     "boostrap": "^2.0.0",
     "bootstrap": "^5.2.2",
+    "cors": "^2.8.5",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
