--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "boostrap": "^2.0.0",
     "bootstrap": "^5.2.2",
     "cors": "^2.8.5",
+    "date-fns": "^2.29.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
+    "react-day-picker": "^8.3.5",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-router": "^6.4.1",
